# ImnodeExperimental

./: .gitignore  CMakeLists.txt
source/: main.cpp  multi_editor.cpp
